--- a/Linker.Web/Linker.Web.csproj
+++ b/Linker.Web/Linker.Web.csproj
@@ -2,23 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <PublishTrimmed>true</PublishTrimmed>
+    <TrimMode>link</TrimMode>
   </PropertyGroup>
 
-  <Target Name="EnsureAllAssembliesAreLinked" BeforeTargets="PrepareForILLink">
-    <ItemGroup>
-      <ManagedAssemblyToLink>
-        <TrimMode>link</TrimMode>
-      </ManagedAssemblyToLink>
-      <TrimmerRootAssembly Include="$(TargetName)" />
-    </ItemGroup>
-  </Target>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0-rc.1.20417.14" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0-rc.1.20417.14" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0-rc.1.20417.14" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0-rc.1.20417.14" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0-rc.1.20417.14" />
+    <KnownFrameworkReference Update="Microsoft.AspNetCore.App" IsTrimmable="true" />
   </ItemGroup>
+
 </Project>
